@@ -1,8 +1,8 @@
-This is OpenDDS version 3.0, released Fri Aug 19 13:47:18 UTC 2011.
+This is OpenDDS version 3.0.1, released Wed Nov 16 20:51:22 UTC 2011.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 3.0
+    OpenDDS VERSION: 3.0.1
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
