@@ -8,5 +8,5 @@
 
 #define DDS_MAJOR_VERSION 3
 #define DDS_MINOR_VERSION 0
-#define DDS_MICRO_VERSION 0
-#define DDS_VERSION "3.0"
+#define DDS_MICRO_VERSION 1
+#define DDS_VERSION "3.0.1"
