@@ -1,3 +1,7 @@
+Wed Nov 16 20:51:22 UTC 2011  Brian Johnson  <johnsonb@ociweb.com>
+
+        * OpenDDS version 3.0.1 released.
+
 Wed Nov 16 16:27:19 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>
 
         * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.h:
